@@ -1,45 +1,166 @@
 package com.txlforma.api.model;
 
 import jakarta.persistence.*;
-import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+/**
+ * Entité Utilisateur - Implémente UserDetails pour Spring Security
+ */
 @Entity
-@Data
+@Table(name = "utilisateurs")
 public class Utilisateur implements UserDetails {
 
-    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
+
+    @Column(unique = true, nullable = false)
+    private String pseudo;
+
+    @Column(unique = true, nullable = false)
+    private String email;
+
+    @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
+    private String motDePasse;
+
     private String nom;
     private String prenom;
-    private String pseudo;
-    private String email;
-    private String motDePasse;
 
     @Enumerated(EnumType.STRING)
     private Role role;
 
-    // --- IMPLEMENTATION USER DETAILS (NETTOYÉE) ---
+    // ============================================
+    // CONSTRUCTEURS
+    // ============================================
+
+    public Utilisateur() {
+    }
+
+    public Utilisateur(String pseudo, String email, String motDePasse,
+                       String nom, String prenom, Role role) {
+        this.pseudo = pseudo;
+        this.email = email;
+        this.motDePasse = motDePasse;
+        this.nom = nom;
+        this.prenom = prenom;
+        this.role = role;
+    }
+
+    // ============================================
+    // GETTERS ET SETTERS
+    // ============================================
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getPseudo() {
+        return pseudo;
+    }
+
+    public void setPseudo(String pseudo) {
+        this.pseudo = pseudo;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getMotDePasse() {
+        return motDePasse;
+    }
+
+    public void setMotDePasse(String motDePasse) {
+        this.motDePasse = motDePasse;
+    }
+
+    public String getNom() {
+        return nom;
+    }
+
+    public void setNom(String nom) {
+        this.nom = nom;
+    }
+
+    public String getPrenom() {
+        return prenom;
+    }
+
+    public void setPrenom(String prenom) {
+        this.prenom = prenom;
+    }
+
+    public Role getRole() {
+        return role;
+    }
+
+    public void setRole(Role role) {
+        this.role = role;
+    }
+
+    // ============================================
+    // IMPLÉMENTATION DE UserDetails
+    // ============================================
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        if (role == null) return List.of();
-        // ✅ On utilise .name() pour transformer l'Enum en String
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(
+                new SimpleGrantedAuthority(role.name())
+        );
     }
 
     @Override
-    public String getPassword() { return motDePasse; }
+    public String getPassword() {
+        return motDePasse;
+    }
 
     @Override
-    public String getUsername() { return pseudo; }
+    public String getUsername() {
+        return pseudo;
+    }
 
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    @Override
+    public String toString() {
+        return "Utilisateur{" +
+                "id=" + id +
+                ", pseudo='" + pseudo + '\'' +
+                ", email='" + email + '\'' +
+                ", nom='" + nom + '\'' +
+                ", prenom='" + prenom + '\'' +
+                ", role=" + role +
+                '}';
+    }
 }
